--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           src="../my-website-2/resources/images/simone-gattullo-logo.png"
           width="100px"
         />
-        <ul>
+        <ul class="menu__items">
           <li><a href="#">home</a></li>
           <li><a href="#">work</a></li>
           <li><a href="#">services</a></li>
@@ -40,57 +40,68 @@
       </nav>
     </header>
     <div class="body-container">
-      <div class="cta-box">
-        <h1>I design things.</h1>
-        <p>Creative solutions that tell your story</p>
-      </div>
+      <main>
+        <div class="cta-box boxes">
+          <h1>I design things.</h1>
+          <p>Creative solutions that tell your story</p>
+        </div>
+      </main>
       <div class="works">
         <h1>Selected works</h1>
         <!-- Da riempire con gallery -->
       </div>
       <div class="services-box">
-        <div class="services-box__container"></div>
-        <h1>What can I do for you?</h1>
-        <p>
-          Every project starts with an idea, and my role is to turn that idea
-          into reality through creative and functional solutions. From graphic
-          design to crafting digital experiences, I guide you through every step
-          of the process, offering designs tailored to enhance your vision and
-          grow your brand. Whatever your needs may be, I'm here to transform
-          your ideas into tangible results.
-        </p>
-        <ul class="services-box__list">
-          <li class="services-box__list-element">brand identity</li>
-          <li class="services-box__list-element">illustration</li>
-          <li class="services-box__list-element">micro animations</li>
-          <li class="services-box__list-element">web design</li>
-          <li class="services-box__list-element">ux/ui</li>
-          <li class="services-box__list-element">3d modeling and rendering</li>
-          <li class="services-box__list-element">printable materials</li>
-          <li class="services-box__list-element">...and much more!</li>
-        </ul>
+        <div class="services-box__container boxes">
+          <h1>What can I do for you?</h1>
+          <p>
+            Every project starts with an idea, and my role is to turn that idea
+            into reality through creative and functional solutions. From graphic
+            design to crafting digital experiences, I guide you through every
+            step of the process, offering designs tailored to enhance your
+            vision and grow your brand. Whatever your needs may be, I'm here to
+            transform your ideas into tangible results.
+          </p>
+          <br />
+          <ul class="services-box__list">
+            <li class="services-box__list-element">brand identity</li>
+            <li class="services-box__list-element">illustration</li>
+            <li class="services-box__list-element">micro animations</li>
+            <li class="services-box__list-element">web design</li>
+            <li class="services-box__list-element">ux/ui</li>
+            <li class="services-box__list-element">
+              3d modeling and rendering
+            </li>
+            <li class="services-box__list-element">printable materials</li>
+            <li class="services-box__list-element">...and much more!</li>
+          </ul>
+        </div>
       </div>
-      <div class="about-box">
+      <div class="about-box boxes">
         <div class="about-box__title">
           <h1>Ciao! Hello! Hola! Hej!</h1>
-        </div>
-        <div class="about-box__bio">
           <p>
-            I'm Simone Gattullo, , a designer based in Italy. During my studies
+            I'm Simone Gattullo, a designer based in Italy. During my studies
             I specialized in design and communication, with the super-power to
-            easily switch between visual and industrial design. I believe that
-            design is continuosly discovery, everyday is a chance to learn
-            something. I love videogames, building LEGO sets, exploring design,
+            easily switch between visual and industrial design.
+            <br />
+            <br />
+            I believe that design is continuosly discovery, everyday is a chance to learn
+            something. 
+            <br />
+            <br />
+            I love videogames, building LEGO sets, exploring design,
             cooking and tinkering - possibily without burning nor detonate
             anything.
           </p>
+        </div>
+        <div>
           <img
+            class="about-box-image"
             src="../my-website-2/resources/images/simone-gattullo-illustration-bypeeps.png"
-            width="150px"
           />
         </div>
-        <button>Let's talk!</button>
       </div>
+      <button>Let's talk!</button>
       <footer>
         <h1>Well, you reached the end, pal!</h1>
         <h2>Not satisfied yet? Catch me on other socials:</h2>
@@ -104,10 +115,9 @@
             <li>yt-logo</li>
           </ul>
         </div>
-        <h5>Made with ❤️ by me, Simone Gattullo - Copyright 2024</h5>
+        <h3>Made with ❤️ by me, Simone Gattullo - Copyright 2024</h3>
       </footer>
     </div>
-
     <script src="" async defer></script>
   </body>
 </html>
