resa home accettabile. Da implementare meglio CSS con classi comuni

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     />
   </head>
   <body>
+
     <header>
       <nav class="menu">
         <img
@@ -39,19 +40,17 @@
         </ul>
       </nav>
     </header>
-    <div class="body-container">
-      <main>
-        <div class="cta-box boxes">
+
+  <div class="main-wrapper">
+
+        <div class="cta-box">
           <h1>I design things.</h1>
           <p>Creative solutions that tell your story</p>
         </div>
-      </main>
-      <div class="works">
-        <h1>Selected works</h1>
+
         <!-- Da riempire con gallery -->
-      </div>
-      <div class="services-box">
-        <div class="services-box__container boxes">
+
+        <div class="services-box">
           <h1>What can I do for you?</h1>
           <p>
             Every project starts with an idea, and my role is to turn that idea
@@ -75,12 +74,11 @@
             <li class="services-box__list-element">...and much more!</li>
           </ul>
         </div>
-      </div>
-      <div class="about-box boxes">
-        <div class="about-box__title">
+
+      <div class="about-box">
+        <div class="about-box-internal">
           <h1>Ciao! Hello! Hola! Hej!</h1>
-          <p>
-            I'm Simone Gattullo, a designer based in Italy. During my studies
+          <p>I'm Simone Gattullo, a designer based in Italy. During my studies
             I specialized in design and communication, with the super-power to
             easily switch between visual and industrial design.
             <br />
@@ -91,17 +89,19 @@
             <br />
             I love videogames, building LEGO sets, exploring design,
             cooking and tinkering - possibily without burning nor detonate
-            anything.
-          </p>
+            anything.</p>
         </div>
-        <div>
-          <img
-            class="about-box-image"
-            src="../my-website-2/resources/images/simone-gattullo-illustration-bypeeps.png"
-          />
-        </div>
+        <img
+        class="about-box-image"
+        src="../my-website-2/resources/images/simone-gattullo-illustration-bypeeps.png"
+        />
       </div>
+    </div>
+
+    <div class="btn">
       <button>Let's talk!</button>
+    </div>
+
       <footer>
         <h1>Well, you reached the end, pal!</h1>
         <h2>Not satisfied yet? Catch me on other socials:</h2>
@@ -117,7 +117,8 @@
         </div>
         <h3>Made with ❤️ by me, Simone Gattullo - Copyright 2024</h3>
       </footer>
-    </div>
+
+      
     <script src="" async defer></script>
   </body>
 </html>
